fix: remove extra padding on home page budget chart

--- a/src/home/LandingPage/landing-page.scss
+++ b/src/home/LandingPage/landing-page.scss
@@ -33,7 +33,7 @@
 
 	.product {
 
-		margin: 30px auto 0 auto;
+		margin: 0 auto;
 		width: 80%;
 
 		h2 {
